// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptinMetrics Snapshots android render matches snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "rgb(242, 242, 242)",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          collapsable={false}
          gestureResponseDistance={
            {
              "bottom": -1,
              "end": -1,
              "start": -1,
              "top": -1,
            }
          }
          onGestureCancel={[Function]}
          pointerEvents="box-none"
          sheetAllowedDetents="large"
          sheetCornerRadius={-1}
          sheetExpandsWhenScrolledToEdge={true}
          sheetGrabberVisible={false}
          sheetLargestUndimmedDetent="all"
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": undefined,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            collapsable={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              [
                {
                  "display": "flex",
                  "overflow": undefined,
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              {
                "close": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              pointerEvents="box-none"
              style={
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  {
                    "backgroundColor": "#000",
                    "flex": 1,
                    "opacity": 0.07,
                  }
                }
              />
            </View>
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                enabled={false}
                handlerTag={-1}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  {
                    "flex": 1,
                    "transform": [
                      {
                        "translateX": 0,
                      },
                      {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="box-none"
                  style={
                    [
                      {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      [
                        {
                          "backgroundColor": "rgb(242, 242, 242)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <RCTSafeAreaView
                        style={
                          {
                            "backgroundColor": "#ffffff",
                            "flex": 1,
                            "paddingBottom": 16,
                            "paddingTop": 42,
                          }
                        }
                      >
                        <RCTScrollView
                          onContentSizeChange={[Function]}
                          onLayout={[Function]}
                          onScroll={[Function]}
                          scrollEventThrottle={150}
                          style={
                            {
                              "backgroundColor": "#ffffff",
                              "flex": 1,
                              "paddingBottom": 16,
                              "paddingTop": 42,
                            }
                          }
                          testID="meta-metrics-container"
                        >
                          <View>
                            <View
                              style={
                                {
                                  "flex": 1,
                                  "flexDirection": "column",
                                  "marginHorizontal": 20,
                                  "paddingBottom": 80,
                                  "rowGap": 16,
                                }
                              }
                            >
                              <Text
                                accessibilityRole="text"
                                style={
                                  {
                                    "color": "#121314",
                                    "fontFamily": "Geist Bold",
                                    "fontSize": 32,
                                    "fontWeight": "700",
                                    "letterSpacing": 0,
                                    "lineHeight": 40,
                                  }
                                }
                                testID="optin-metrics-title-id"
                              >
                                Help us improve MetaMask
                              </Text>
                              <Text
                                accessibilityRole="text"
                                style={
                                  {
                                    "color": "#121314",
                                    "fontFamily": "Geist Regular",
                                    "fontSize": 16,
                                    "letterSpacing": 0,
                                    "lineHeight": 24,
                                  }
                                }
                                testID="optin-metrics-privacy-policy-description"
                              >
                                We’d like to gather basic usage data to improve MetaMask. Know that we never sell the data you provide here.
                              </Text>
                              <View
                                style={
                                  {
                                    "alignItems": "flex-start",
                                    "flex": 0,
                                    "flexDirection": "row",
                                    "gap": 16,
                                  }
                                }
                              >
                                <SvgMock
                                  color="#457a39"
                                  fill="currentColor"
                                  height={24}
                                  name="CheckBold"
                                  style={
                                    {
                                      "height": 24,
                                      "width": 24,
                                    }
                                  }
                                  width={24}
                                />
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    {
                                      "color": "#121314",
                                      "flex": 1,
                                      "fontFamily": "Geist Regular",
                                      "fontSize": 16,
                                      "letterSpacing": 0,
                                      "lineHeight": 24,
                                    }
                                  }
                                >
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "color": "#121314",
                                        "fontFamily": "Geist Medium",
                                        "fontSize": 16,
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    Private: 
                                  </Text>
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "color": "#686e7d",
                                        "fontFamily": "Geist Regular",
                                        "fontSize": 16,
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    Clicks and views on the app are stored, but other details (like your public address) are not.
                                  </Text>
                                </Text>
                              </View>
                              <View
                                style={
                                  {
                                    "alignItems": "flex-start",
                                    "flex": 0,
                                    "flexDirection": "row",
                                    "gap": 16,
                                  }
                                }
                              >
                                <SvgMock
                                  color="#457a39"
                                  fill="currentColor"
                                  height={24}
                                  name="CheckBold"
                                  style={
                                    {
                                      "height": 24,
                                      "width": 24,
                                    }
                                  }
                                  width={24}
                                />
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    {
                                      "color": "#121314",
                                      "flex": 1,
                                      "fontFamily": "Geist Regular",
                                      "fontSize": 16,
                                      "letterSpacing": 0,
                                      "lineHeight": 24,
                                    }
                                  }
                                >
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "color": "#121314",
                                        "fontFamily": "Geist Medium",
                                        "fontSize": 16,
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    General: 
                                  </Text>
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "color": "#686e7d",
                                        "fontFamily": "Geist Regular",
                                        "fontSize": 16,
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    We temporarily use your IP address to detect a general location (like your country or region), but it's never stored.
                                  </Text>
                                </Text>
                              </View>
                              <View
                                style={
                                  {
                                    "alignItems": "flex-start",
                                    "flex": 0,
                                    "flexDirection": "row",
                                    "gap": 16,
                                  }
                                }
                              >
                                <SvgMock
                                  color="#457a39"
                                  fill="currentColor"
                                  height={24}
                                  name="CheckBold"
                                  style={
                                    {
                                      "height": 24,
                                      "width": 24,
                                    }
                                  }
                                  width={24}
                                />
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    {
                                      "color": "#121314",
                                      "flex": 1,
                                      "fontFamily": "Geist Regular",
                                      "fontSize": 16,
                                      "letterSpacing": 0,
                                      "lineHeight": 24,
                                    }
                                  }
                                >
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "color": "#121314",
                                        "fontFamily": "Geist Medium",
                                        "fontSize": 16,
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    Optional: 
                                  </Text>
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "color": "#686e7d",
                                        "fontFamily": "Geist Regular",
                                        "fontSize": 16,
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    You decide if you want to share or delete your usage data via settings any time.
                                  </Text>
                                </Text>
                              </View>
                              <TouchableOpacity
                                activeOpacity={1}
                                onPress={[Function]}
                                style={
                                  {
                                    "alignItems": "flex-start",
                                    "display": "flex",
                                    "flexDirection": "row",
                                    "gap": 16,
                                    "marginRight": 25,
                                  }
                                }
                              >
                                <TouchableOpacity
                                  accessibilityRole="checkbox"
                                  accessible={true}
                                  disabled={false}
                                  onPress={[Function]}
                                  style={
                                    {
                                      "alignItems": "center",
                                      "flexDirection": "row",
                                      "height": 24,
                                      "opacity": 1,
                                    }
                                  }
                                >
                                  <View
                                    accessibilityRole="checkbox"
                                    style={
                                      {
                                        "alignItems": "center",
                                        "backgroundColor": "#ffffff",
                                        "borderColor": "#121314",
                                        "borderRadius": 4,
                                        "borderWidth": 2,
                                        "height": 20,
                                        "justifyContent": "center",
                                        "width": 20,
                                      }
                                    }
                                  />
                                </TouchableOpacity>
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    {
                                      "color": "#121314",
                                      "fontFamily": "Geist Medium",
                                      "fontSize": 14,
                                      "letterSpacing": 0,
                                      "lineHeight": 22,
                                    }
                                  }
                                >
                                  We'll use this data to learn how you interact with our marketing communications. We may share relevant news (like product features).
                                </Text>
                              </TouchableOpacity>
                              <View
                                style={
                                  {
                                    "backgroundColor": "#b7bbc866",
                                    "height": 1,
                                  }
                                }
                              />
                              <Text
                                accessibilityRole="text"
                                style={
                                  {
                                    "color": "#686e7d",
                                    "fontFamily": "Geist Regular",
                                    "fontSize": 14,
                                    "letterSpacing": 0,
                                    "lineHeight": 22,
                                  }
                                }
                              >
                                We’ll let you know if we decide to use this data for other purposes. You can review our 
                                <Text
                                  accessibilityRole="text"
                                  onPress={[Function]}
                                  style={
                                    {
                                      "color": "#4459ff",
                                      "fontFamily": "Geist Regular",
                                      "fontSize": 14,
                                      "letterSpacing": 0,
                                      "lineHeight": 22,
                                    }
                                  }
                                >
                                  Privacy Policy
                                </Text>
                                 for more information. Remember, you can go to settings and opt out at any time.
                              </Text>
                            </View>
                          </View>
                        </RCTScrollView>
                        <View
                          style={
                            {
                              "flexDirection": "row",
                              "padding": 16,
                            }
                          }
                        >
                          <TouchableOpacity
                            accessibilityRole="button"
                            accessible={true}
                            activeOpacity={1}
                            onPress={[Function]}
                            onPressIn={[Function]}
                            onPressOut={[Function]}
                            style={
                              {
                                "alignItems": "center",
                                "alignSelf": "flex-start",
                                "backgroundColor": "#3c4d9d0f",
                                "borderColor": "transparent",
                                "borderRadius": 12,
                                "borderWidth": 1,
                                "flex": 1,
                                "flexDirection": "row",
                                "height": 48,
                                "justifyContent": "center",
                                "overflow": "hidden",
                                "paddingHorizontal": 16,
                              }
                            }
                            testID="optin-metrics-no-thanks-button-id"
                          >
                            <Text
                              accessibilityRole="text"
                              style={
                                {
                                  "color": "#121314",
                                  "fontFamily": "Geist Medium",
                                  "fontSize": 16,
                                  "letterSpacing": 0,
                                  "lineHeight": 24,
                                }
                              }
                            >
                              No thanks
                            </Text>
                          </TouchableOpacity>
                          <View
                            style={
                              {
                                "width": 16,
                              }
                            }
                          />
                          <TouchableOpacity
                            accessibilityRole="button"
                            accessible={true}
                            activeOpacity={1}
                            onPress={[Function]}
                            onPressIn={[Function]}
                            onPressOut={[Function]}
                            style={
                              {
                                "alignItems": "center",
                                "alignSelf": "flex-start",
                                "backgroundColor": "#121314",
                                "borderRadius": 12,
                                "flex": 1,
                                "flexDirection": "row",
                                "height": 48,
                                "justifyContent": "center",
                                "overflow": "hidden",
                                "paddingHorizontal": 16,
                              }
                            }
                            testID="optin-metrics-i-agree-button-id"
                          >
                            <Text
                              accessibilityRole="text"
                              style={
                                {
                                  "color": "#ffffff",
                                  "fontFamily": "Geist Medium",
                                  "fontSize": 16,
                                  "letterSpacing": 0,
                                  "lineHeight": 24,
                                }
                              }
                            >
                              I agree
                            </Text>
                          </TouchableOpacity>
                        </View>
                      </RCTSafeAreaView>
                    </View>
                    <View
                      collapsable={false}
                      pointerEvents="box-none"
                      style={{}}
                    >
                      <View
                        accessibilityElementsHidden={false}
                        importantForAccessibility="auto"
                        onLayout={[Function]}
                        pointerEvents="box-none"
                        style={null}
                      >
                        <View
                          collapsable={false}
                          pointerEvents="box-none"
                          style={
                            {
                              "bottom": 0,
                              "left": 0,
                              "position": "absolute",
                              "right": 0,
                              "top": 0,
                              "zIndex": 0,
                            }
                          }
                        >
                          <View
                            collapsable={false}
                            style={
                              {
                                "backgroundColor": "rgb(255, 255, 255)",
                                "borderBottomColor": "rgb(216, 216, 216)",
                                "flex": 1,
                                "shadowColor": "rgb(216, 216, 216)",
                                "shadowOffset": {
                                  "height": 0.5,
                                  "width": 0,
                                },
                                "shadowOpacity": 0.85,
                                "shadowRadius": 0,
                              }
                            }
                          />
                        </View>
                        <View
                          collapsable={false}
                          pointerEvents="box-none"
                          style={
                            {
                              "height": 56,
                              "maxHeight": undefined,
                              "minHeight": undefined,
                              "opacity": undefined,
                              "transform": undefined,
                            }
                          }
                        >
                          <View
                            pointerEvents="none"
                            style={
                              {
                                "height": 0,
                              }
                            }
                          />
                          <View
                            pointerEvents="box-none"
                            style={
                              {
                                "alignItems": "stretch",
                                "flex": 1,
                                "flexDirection": "row",
                              }
                            }
                          >
                            <View
                              collapsable={false}
                              pointerEvents="box-none"
                              style={
                                {
                                  "alignItems": "flex-start",
                                  "flexBasis": 0,
                                  "flexGrow": 1,
                                  "justifyContent": "center",
                                  "marginStart": 0,
                                }
                              }
                            />
                            <View
                              collapsable={false}
                              pointerEvents="box-none"
                              style={
                                {
                                  "justifyContent": "center",
                                  "marginHorizontal": 16,
                                  "maxWidth": 718,
                                }
                              }
                            >
                              <Text
                                accessibilityRole="header"
                                aria-level="1"
                                collapsable={false}
                                numberOfLines={1}
                                onLayout={[Function]}
                                style={
                                  {
                                    "color": "rgb(28, 28, 30)",
                                    "fontSize": 17,
                                    "fontWeight": "600",
                                  }
                                }
                              >
                                OptinMetrics
                              </Text>
                            </View>
                            <View
                              collapsable={false}
                              pointerEvents="box-none"
                              style={
                                {
                                  "alignItems": "flex-end",
                                  "flexBasis": 0,
                                  "flexGrow": 1,
                                  "justifyContent": "center",
                                  "marginEnd": 0,
                                }
                              }
                            />
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          {
            "height": 56,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": 1,
          }
        }
      />
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`OptinMetrics Snapshots android render matches snapshot with status bar height to zero 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "rgb(242, 242, 242)",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          collapsable={false}
          gestureResponseDistance={
            {
              "bottom": -1,
              "end": -1,
              "start": -1,
              "top": -1,
            }
          }
          onGestureCancel={[Function]}
          pointerEvents="box-none"
          sheetAllowedDetents="large"
          sheetCornerRadius={-1}
          sheetExpandsWhenScrolledToEdge={true}
          sheetGrabberVisible={false}
          sheetLargestUndimmedDetent="all"
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": undefined,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            collapsable={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              [
                {
                  "display": "flex",
                  "overflow": undefined,
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              {
                "close": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              pointerEvents="box-none"
              style={
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  {
                    "backgroundColor": "#000",
                    "flex": 1,
                    "opacity": 0.07,
                  }
                }
              />
            </View>
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                enabled={false}
                handlerTag={-1}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  {
                    "flex": 1,
                    "transform": [
                      {
                        "translateX": 0,
                      },
                      {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="box-none"
                  style={
                    [
                      {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      [
                        {
                          "backgroundColor": "rgb(242, 242, 242)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <RCTSafeAreaView
                        style={
                          {
                            "backgroundColor": "#ffffff",
                            "flex": 1,
                            "paddingBottom": 16,
                            "paddingTop": 24,
                          }
                        }
                      >
                        <RCTScrollView
                          onContentSizeChange={[Function]}
                          onLayout={[Function]}
                          onScroll={[Function]}
                          scrollEventThrottle={150}
                          style={
                            {
                              "backgroundColor": "#ffffff",
                              "flex": 1,
                              "paddingBottom": 16,
                              "paddingTop": 24,
                            }
                          }
                          testID="meta-metrics-container"
                        >
                          <View>
                            <View
                              style={
                                {
                                  "flex": 1,
                                  "flexDirection": "column",
                                  "marginHorizontal": 20,
                                  "paddingBottom": 80,
                                  "rowGap": 16,
                                }
                              }
                            >
                              <Text
                                accessibilityRole="text"
                                style={
                                  {
                                    "color": "#121314",
                                    "fontFamily": "Geist Bold",
                                    "fontSize": 32,
                                    "fontWeight": "700",
                                    "letterSpacing": 0,
                                    "lineHeight": 40,
                                  }
                                }
                                testID="optin-metrics-title-id"
                              >
                                Help us improve MetaMask
                              </Text>
                              <Text
                                accessibilityRole="text"
                                style={
                                  {
                                    "color": "#121314",
                                    "fontFamily": "Geist Regular",
                                    "fontSize": 16,
                                    "letterSpacing": 0,
                                    "lineHeight": 24,
                                  }
                                }
                                testID="optin-metrics-privacy-policy-description"
                              >
                                We’d like to gather basic usage data to improve MetaMask. Know that we never sell the data you provide here.
                              </Text>
                              <View
                                style={
                                  {
                                    "alignItems": "flex-start",
                                    "flex": 0,
                                    "flexDirection": "row",
                                    "gap": 16,
                                  }
                                }
                              >
                                <SvgMock
                                  color="#457a39"
                                  fill="currentColor"
                                  height={24}
                                  name="CheckBold"
                                  style={
                                    {
                                      "height": 24,
                                      "width": 24,
                                    }
                                  }
                                  width={24}
                                />
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    {
                                      "color": "#121314",
                                      "flex": 1,
                                      "fontFamily": "Geist Regular",
                                      "fontSize": 16,
                                      "letterSpacing": 0,
                                      "lineHeight": 24,
                                    }
                                  }
                                >
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "color": "#121314",
                                        "fontFamily": "Geist Medium",
                                        "fontSize": 16,
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    Private: 
                                  </Text>
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "color": "#686e7d",
                                        "fontFamily": "Geist Regular",
                                        "fontSize": 16,
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    Clicks and views on the app are stored, but other details (like your public address) are not.
                                  </Text>
                                </Text>
                              </View>
                              <View
                                style={
                                  {
                                    "alignItems": "flex-start",
                                    "flex": 0,
                                    "flexDirection": "row",
                                    "gap": 16,
                                  }
                                }
                              >
                                <SvgMock
                                  color="#457a39"
                                  fill="currentColor"
                                  height={24}
                                  name="CheckBold"
                                  style={
                                    {
                                      "height": 24,
                                      "width": 24,
                                    }
                                  }
                                  width={24}
                                />
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    {
                                      "color": "#121314",
                                      "flex": 1,
                                      "fontFamily": "Geist Regular",
                                      "fontSize": 16,
                                      "letterSpacing": 0,
                                      "lineHeight": 24,
                                    }
                                  }
                                >
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "color": "#121314",
                                        "fontFamily": "Geist Medium",
                                        "fontSize": 16,
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    General: 
                                  </Text>
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "color": "#686e7d",
                                        "fontFamily": "Geist Regular",
                                        "fontSize": 16,
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    We temporarily use your IP address to detect a general location (like your country or region), but it's never stored.
                                  </Text>
                                </Text>
                              </View>
                              <View
                                style={
                                  {
                                    "alignItems": "flex-start",
                                    "flex": 0,
                                    "flexDirection": "row",
                                    "gap": 16,
                                  }
                                }
                              >
                                <SvgMock
                                  color="#457a39"
                                  fill="currentColor"
                                  height={24}
                                  name="CheckBold"
                                  style={
                                    {
                                      "height": 24,
                                      "width": 24,
                                    }
                                  }
                                  width={24}
                                />
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    {
                                      "color": "#121314",
                                      "flex": 1,
                                      "fontFamily": "Geist Regular",
                                      "fontSize": 16,
                                      "letterSpacing": 0,
                                      "lineHeight": 24,
                                    }
                                  }
                                >
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "color": "#121314",
                                        "fontFamily": "Geist Medium",
                                        "fontSize": 16,
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    Optional: 
                                  </Text>
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "color": "#686e7d",
                                        "fontFamily": "Geist Regular",
                                        "fontSize": 16,
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    You decide if you want to share or delete your usage data via settings any time.
                                  </Text>
                                </Text>
                              </View>
                              <TouchableOpacity
                                activeOpacity={1}
                                onPress={[Function]}
                                style={
                                  {
                                    "alignItems": "flex-start",
                                    "display": "flex",
                                    "flexDirection": "row",
                                    "gap": 16,
                                    "marginRight": 25,
                                  }
                                }
                              >
                                <TouchableOpacity
                                  accessibilityRole="checkbox"
                                  accessible={true}
                                  disabled={false}
                                  onPress={[Function]}
                                  style={
                                    {
                                      "alignItems": "center",
                                      "flexDirection": "row",
                                      "height": 24,
                                      "opacity": 1,
                                    }
                                  }
                                >
                                  <View
                                    accessibilityRole="checkbox"
                                    style={
                                      {
                                        "alignItems": "center",
                                        "backgroundColor": "#ffffff",
                                        "borderColor": "#121314",
                                        "borderRadius": 4,
                                        "borderWidth": 2,
                                        "height": 20,
                                        "justifyContent": "center",
                                        "width": 20,
                                      }
                                    }
                                  />
                                </TouchableOpacity>
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    {
                                      "color": "#121314",
                                      "fontFamily": "Geist Medium",
                                      "fontSize": 14,
                                      "letterSpacing": 0,
                                      "lineHeight": 22,
                                    }
                                  }
                                >
                                  We'll use this data to learn how you interact with our marketing communications. We may share relevant news (like product features).
                                </Text>
                              </TouchableOpacity>
                              <View
                                style={
                                  {
                                    "backgroundColor": "#b7bbc866",
                                    "height": 1,
                                  }
                                }
                              />
                              <Text
                                accessibilityRole="text"
                                style={
                                  {
                                    "color": "#686e7d",
                                    "fontFamily": "Geist Regular",
                                    "fontSize": 14,
                                    "letterSpacing": 0,
                                    "lineHeight": 22,
                                  }
                                }
                              >
                                We’ll let you know if we decide to use this data for other purposes. You can review our 
                                <Text
                                  accessibilityRole="text"
                                  onPress={[Function]}
                                  style={
                                    {
                                      "color": "#4459ff",
                                      "fontFamily": "Geist Regular",
                                      "fontSize": 14,
                                      "letterSpacing": 0,
                                      "lineHeight": 22,
                                    }
                                  }
                                >
                                  Privacy Policy
                                </Text>
                                 for more information. Remember, you can go to settings and opt out at any time.
                              </Text>
                            </View>
                          </View>
                        </RCTScrollView>
                        <View
                          style={
                            {
                              "flexDirection": "row",
                              "padding": 16,
                            }
                          }
                        >
                          <TouchableOpacity
                            accessibilityRole="button"
                            accessible={true}
                            activeOpacity={1}
                            onPress={[Function]}
                            onPressIn={[Function]}
                            onPressOut={[Function]}
                            style={
                              {
                                "alignItems": "center",
                                "alignSelf": "flex-start",
                                "backgroundColor": "#3c4d9d0f",
                                "borderColor": "transparent",
                                "borderRadius": 12,
                                "borderWidth": 1,
                                "flex": 1,
                                "flexDirection": "row",
                                "height": 48,
                                "justifyContent": "center",
                                "overflow": "hidden",
                                "paddingHorizontal": 16,
                              }
                            }
                            testID="optin-metrics-no-thanks-button-id"
                          >
                            <Text
                              accessibilityRole="text"
                              style={
                                {
                                  "color": "#121314",
                                  "fontFamily": "Geist Medium",
                                  "fontSize": 16,
                                  "letterSpacing": 0,
                                  "lineHeight": 24,
                                }
                              }
                            >
                              No thanks
                            </Text>
                          </TouchableOpacity>
                          <View
                            style={
                              {
                                "width": 16,
                              }
                            }
                          />
                          <TouchableOpacity
                            accessibilityRole="button"
                            accessible={true}
                            activeOpacity={1}
                            onPress={[Function]}
                            onPressIn={[Function]}
                            onPressOut={[Function]}
                            style={
                              {
                                "alignItems": "center",
                                "alignSelf": "flex-start",
                                "backgroundColor": "#121314",
                                "borderRadius": 12,
                                "flex": 1,
                                "flexDirection": "row",
                                "height": 48,
                                "justifyContent": "center",
                                "overflow": "hidden",
                                "paddingHorizontal": 16,
                              }
                            }
                            testID="optin-metrics-i-agree-button-id"
                          >
                            <Text
                              accessibilityRole="text"
                              style={
                                {
                                  "color": "#ffffff",
                                  "fontFamily": "Geist Medium",
                                  "fontSize": 16,
                                  "letterSpacing": 0,
                                  "lineHeight": 24,
                                }
                              }
                            >
                              I agree
                            </Text>
                          </TouchableOpacity>
                        </View>
                      </RCTSafeAreaView>
                    </View>
                    <View
                      collapsable={false}
                      pointerEvents="box-none"
                      style={{}}
                    >
                      <View
                        accessibilityElementsHidden={false}
                        importantForAccessibility="auto"
                        onLayout={[Function]}
                        pointerEvents="box-none"
                        style={null}
                      >
                        <View
                          collapsable={false}
                          pointerEvents="box-none"
                          style={
                            {
                              "bottom": 0,
                              "left": 0,
                              "position": "absolute",
                              "right": 0,
                              "top": 0,
                              "zIndex": 0,
                            }
                          }
                        >
                          <View
                            collapsable={false}
                            style={
                              {
                                "backgroundColor": "rgb(255, 255, 255)",
                                "borderBottomColor": "rgb(216, 216, 216)",
                                "flex": 1,
                                "shadowColor": "rgb(216, 216, 216)",
                                "shadowOffset": {
                                  "height": 0.5,
                                  "width": 0,
                                },
                                "shadowOpacity": 0.85,
                                "shadowRadius": 0,
                              }
                            }
                          />
                        </View>
                        <View
                          collapsable={false}
                          pointerEvents="box-none"
                          style={
                            {
                              "height": 56,
                              "maxHeight": undefined,
                              "minHeight": undefined,
                              "opacity": undefined,
                              "transform": undefined,
                            }
                          }
                        >
                          <View
                            pointerEvents="none"
                            style={
                              {
                                "height": 0,
                              }
                            }
                          />
                          <View
                            pointerEvents="box-none"
                            style={
                              {
                                "alignItems": "stretch",
                                "flex": 1,
                                "flexDirection": "row",
                              }
                            }
                          >
                            <View
                              collapsable={false}
                              pointerEvents="box-none"
                              style={
                                {
                                  "alignItems": "flex-start",
                                  "flexBasis": 0,
                                  "flexGrow": 1,
                                  "justifyContent": "center",
                                  "marginStart": 0,
                                }
                              }
                            />
                            <View
                              collapsable={false}
                              pointerEvents="box-none"
                              style={
                                {
                                  "justifyContent": "center",
                                  "marginHorizontal": 16,
                                  "maxWidth": 718,
                                }
                              }
                            >
                              <Text
                                accessibilityRole="header"
                                aria-level="1"
                                collapsable={false}
                                numberOfLines={1}
                                onLayout={[Function]}
                                style={
                                  {
                                    "color": "rgb(28, 28, 30)",
                                    "fontSize": 17,
                                    "fontWeight": "600",
                                  }
                                }
                              >
                                OptinMetrics
                              </Text>
                            </View>
                            <View
                              collapsable={false}
                              pointerEvents="box-none"
                              style={
                                {
                                  "alignItems": "flex-end",
                                  "flexBasis": 0,
                                  "flexGrow": 1,
                                  "justifyContent": "center",
                                  "marginEnd": 0,
                                }
                              }
                            />
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          {
            "height": 56,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": 1,
          }
        }
      />
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`OptinMetrics Snapshots iOS renders correctly 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "rgb(242, 242, 242)",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          {
            "zIndex": 1,
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "backgroundColor": "rgb(255, 255, 255)",
                  "borderBottomColor": "rgb(216, 216, 216)",
                  "flex": 1,
                  "shadowColor": "rgb(216, 216, 216)",
                  "shadowOffset": {
                    "height": 0.5,
                    "width": 0,
                  },
                  "shadowOpacity": 0.85,
                  "shadowRadius": 0,
                }
              }
            />
          </View>
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "height": 44,
                "maxHeight": undefined,
                "minHeight": undefined,
                "opacity": undefined,
                "transform": undefined,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-start",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginStart": 0,
                    "opacity": 1,
                  }
                }
              />
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "justifyContent": "center",
                    "marginHorizontal": 16,
                    "maxWidth": 718,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  collapsable={false}
                  numberOfLines={1}
                  onLayout={[Function]}
                  style={
                    {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 17,
                      "fontWeight": "600",
                    }
                  }
                >
                  OptinMetrics
                </Text>
              </View>
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-end",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginEnd": 0,
                    "opacity": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          collapsable={false}
          gestureResponseDistance={
            {
              "bottom": -1,
              "end": -1,
              "start": -1,
              "top": -1,
            }
          }
          onGestureCancel={[Function]}
          pointerEvents="box-none"
          sheetAllowedDetents="large"
          sheetCornerRadius={-1}
          sheetExpandsWhenScrolledToEdge={true}
          sheetGrabberVisible={false}
          sheetLargestUndimmedDetent="all"
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": undefined,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            collapsable={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              [
                {
                  "display": "flex",
                  "overflow": undefined,
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              {
                "close": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                enabled={false}
                handlerTag={-1}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  {
                    "flex": 1,
                    "transform": [
                      {
                        "translateX": 0,
                      },
                      {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="box-none"
                  style={
                    [
                      {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      [
                        {
                          "backgroundColor": "rgb(242, 242, 242)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <RCTSafeAreaView
                        style={
                          {
                            "backgroundColor": "#ffffff",
                            "flex": 1,
                            "paddingBottom": 16,
                            "paddingTop": 24,
                          }
                        }
                      >
                        <RCTScrollView
                          onContentSizeChange={[Function]}
                          onLayout={[Function]}
                          onScroll={[Function]}
                          scrollEventThrottle={150}
                          style={
                            {
                              "backgroundColor": "#ffffff",
                              "flex": 1,
                              "paddingBottom": 16,
                              "paddingTop": 24,
                            }
                          }
                          testID="meta-metrics-container"
                        >
                          <View>
                            <View
                              style={
                                {
                                  "flex": 1,
                                  "flexDirection": "column",
                                  "marginHorizontal": 20,
                                  "paddingBottom": 80,
                                  "rowGap": 16,
                                }
                              }
                            >
                              <Text
                                accessibilityRole="text"
                                style={
                                  {
                                    "color": "#121314",
                                    "fontFamily": "Geist Bold",
                                    "fontSize": 32,
                                    "fontWeight": "700",
                                    "letterSpacing": 0,
                                    "lineHeight": 40,
                                  }
                                }
                                testID="optin-metrics-title-id"
                              >
                                Help us improve MetaMask
                              </Text>
                              <Text
                                accessibilityRole="text"
                                style={
                                  {
                                    "color": "#121314",
                                    "fontFamily": "Geist Regular",
                                    "fontSize": 16,
                                    "letterSpacing": 0,
                                    "lineHeight": 24,
                                  }
                                }
                                testID="optin-metrics-privacy-policy-description"
                              >
                                We’d like to gather basic usage data to improve MetaMask. Know that we never sell the data you provide here.
                              </Text>
                              <View
                                style={
                                  {
                                    "alignItems": "flex-start",
                                    "flex": 0,
                                    "flexDirection": "row",
                                    "gap": 16,
                                  }
                                }
                              >
                                <SvgMock
                                  color="#457a39"
                                  fill="currentColor"
                                  height={24}
                                  name="CheckBold"
                                  style={
                                    {
                                      "height": 24,
                                      "width": 24,
                                    }
                                  }
                                  width={24}
                                />
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    {
                                      "color": "#121314",
                                      "flex": 1,
                                      "fontFamily": "Geist Regular",
                                      "fontSize": 16,
                                      "letterSpacing": 0,
                                      "lineHeight": 24,
                                    }
                                  }
                                >
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "color": "#121314",
                                        "fontFamily": "Geist Medium",
                                        "fontSize": 16,
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    Private: 
                                  </Text>
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "color": "#686e7d",
                                        "fontFamily": "Geist Regular",
                                        "fontSize": 16,
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    Clicks and views on the app are stored, but other details (like your public address) are not.
                                  </Text>
                                </Text>
                              </View>
                              <View
                                style={
                                  {
                                    "alignItems": "flex-start",
                                    "flex": 0,
                                    "flexDirection": "row",
                                    "gap": 16,
                                  }
                                }
                              >
                                <SvgMock
                                  color="#457a39"
                                  fill="currentColor"
                                  height={24}
                                  name="CheckBold"
                                  style={
                                    {
                                      "height": 24,
                                      "width": 24,
                                    }
                                  }
                                  width={24}
                                />
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    {
                                      "color": "#121314",
                                      "flex": 1,
                                      "fontFamily": "Geist Regular",
                                      "fontSize": 16,
                                      "letterSpacing": 0,
                                      "lineHeight": 24,
                                    }
                                  }
                                >
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "color": "#121314",
                                        "fontFamily": "Geist Medium",
                                        "fontSize": 16,
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    General: 
                                  </Text>
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "color": "#686e7d",
                                        "fontFamily": "Geist Regular",
                                        "fontSize": 16,
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    We temporarily use your IP address to detect a general location (like your country or region), but it's never stored.
                                  </Text>
                                </Text>
                              </View>
                              <View
                                style={
                                  {
                                    "alignItems": "flex-start",
                                    "flex": 0,
                                    "flexDirection": "row",
                                    "gap": 16,
                                  }
                                }
                              >
                                <SvgMock
                                  color="#457a39"
                                  fill="currentColor"
                                  height={24}
                                  name="CheckBold"
                                  style={
                                    {
                                      "height": 24,
                                      "width": 24,
                                    }
                                  }
                                  width={24}
                                />
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    {
                                      "color": "#121314",
                                      "flex": 1,
                                      "fontFamily": "Geist Regular",
                                      "fontSize": 16,
                                      "letterSpacing": 0,
                                      "lineHeight": 24,
                                    }
                                  }
                                >
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "color": "#121314",
                                        "fontFamily": "Geist Medium",
                                        "fontSize": 16,
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    Optional: 
                                  </Text>
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "color": "#686e7d",
                                        "fontFamily": "Geist Regular",
                                        "fontSize": 16,
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    You decide if you want to share or delete your usage data via settings any time.
                                  </Text>
                                </Text>
                              </View>
                              <TouchableOpacity
                                activeOpacity={1}
                                onPress={[Function]}
                                style={
                                  {
                                    "alignItems": "flex-start",
                                    "display": "flex",
                                    "flexDirection": "row",
                                    "gap": 16,
                                    "marginRight": 25,
                                  }
                                }
                              >
                                <TouchableOpacity
                                  accessibilityRole="checkbox"
                                  accessible={true}
                                  disabled={false}
                                  onPress={[Function]}
                                  style={
                                    {
                                      "alignItems": "center",
                                      "flexDirection": "row",
                                      "height": 24,
                                      "opacity": 1,
                                    }
                                  }
                                >
                                  <View
                                    accessibilityRole="checkbox"
                                    style={
                                      {
                                        "alignItems": "center",
                                        "backgroundColor": "#ffffff",
                                        "borderColor": "#121314",
                                        "borderRadius": 4,
                                        "borderWidth": 2,
                                        "height": 20,
                                        "justifyContent": "center",
                                        "width": 20,
                                      }
                                    }
                                  />
                                </TouchableOpacity>
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    {
                                      "color": "#121314",
                                      "fontFamily": "Geist Medium",
                                      "fontSize": 14,
                                      "letterSpacing": 0,
                                      "lineHeight": 22,
                                    }
                                  }
                                >
                                  We'll use this data to learn how you interact with our marketing communications. We may share relevant news (like product features).
                                </Text>
                              </TouchableOpacity>
                              <View
                                style={
                                  {
                                    "backgroundColor": "#b7bbc866",
                                    "height": 1,
                                  }
                                }
                              />
                              <Text
                                accessibilityRole="text"
                                style={
                                  {
                                    "color": "#686e7d",
                                    "fontFamily": "Geist Regular",
                                    "fontSize": 14,
                                    "letterSpacing": 0,
                                    "lineHeight": 22,
                                  }
                                }
                              >
                                We’ll let you know if we decide to use this data for other purposes. You can review our 
                                <Text
                                  accessibilityRole="text"
                                  onPress={[Function]}
                                  style={
                                    {
                                      "color": "#4459ff",
                                      "fontFamily": "Geist Regular",
                                      "fontSize": 14,
                                      "letterSpacing": 0,
                                      "lineHeight": 22,
                                    }
                                  }
                                >
                                  Privacy Policy
                                </Text>
                                 for more information. Remember, you can go to settings and opt out at any time.
                              </Text>
                            </View>
                          </View>
                        </RCTScrollView>
                        <View
                          style={
                            {
                              "flexDirection": "row",
                              "padding": 16,
                            }
                          }
                        >
                          <TouchableOpacity
                            accessibilityRole="button"
                            accessible={true}
                            activeOpacity={1}
                            onPress={[Function]}
                            onPressIn={[Function]}
                            onPressOut={[Function]}
                            style={
                              {
                                "alignItems": "center",
                                "alignSelf": "flex-start",
                                "backgroundColor": "#3c4d9d0f",
                                "borderColor": "transparent",
                                "borderRadius": 12,
                                "borderWidth": 1,
                                "flex": 1,
                                "flexDirection": "row",
                                "height": 48,
                                "justifyContent": "center",
                                "overflow": "hidden",
                                "paddingHorizontal": 16,
                              }
                            }
                            testID="optin-metrics-no-thanks-button-id"
                          >
                            <Text
                              accessibilityRole="text"
                              style={
                                {
                                  "color": "#121314",
                                  "fontFamily": "Geist Medium",
                                  "fontSize": 16,
                                  "letterSpacing": 0,
                                  "lineHeight": 24,
                                }
                              }
                            >
                              No thanks
                            </Text>
                          </TouchableOpacity>
                          <View
                            style={
                              {
                                "width": 16,
                              }
                            }
                          />
                          <TouchableOpacity
                            accessibilityRole="button"
                            accessible={true}
                            activeOpacity={1}
                            onPress={[Function]}
                            onPressIn={[Function]}
                            onPressOut={[Function]}
                            style={
                              {
                                "alignItems": "center",
                                "alignSelf": "flex-start",
                                "backgroundColor": "#121314",
                                "borderRadius": 12,
                                "flex": 1,
                                "flexDirection": "row",
                                "height": 48,
                                "justifyContent": "center",
                                "overflow": "hidden",
                                "paddingHorizontal": 16,
                              }
                            }
                            testID="optin-metrics-i-agree-button-id"
                          >
                            <Text
                              accessibilityRole="text"
                              style={
                                {
                                  "color": "#ffffff",
                                  "fontFamily": "Geist Medium",
                                  "fontSize": 16,
                                  "letterSpacing": 0,
                                  "lineHeight": 24,
                                }
                              }
                            >
                              I agree
                            </Text>
                          </TouchableOpacity>
                        </View>
                      </RCTSafeAreaView>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
    </View>
  </RNCSafeAreaProvider>
</View>
`;
